unpackaged/main/default/objects/Alumni_Survey__c/Alumni_Survey__c.object-meta.xml
<CustomObject>
    <label>Alumni Survey</label>
    <nameField>
        <label>Alumni Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alumni Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>