unpackaged/main/default/objects/Alumni_Survey__c/fields/Academically_prepared_post_Verto__c.field-meta.xml
<CustomField>
    <fullName>Academically_prepared_post_Verto__c</fullName>
    <label>Academically prepared post-Verto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>