unpackaged/main/default/objects/Alumni_Survey__c/fields/Activities_Resources__c.field-meta.xml
<CustomField>
    <fullName>Activities_Resources__c</fullName>
    <inlineHelpText>What activities, resources would you take advantage of if they were offered to you as a Verto Alumnus</inlineHelpText>
    <label>Activities and resources if offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alumni Ambassadors Program (spokesperson for Verto Education at events)</fullName>
            </value>
            <value>
                <fullName>Career Workshops (e.g. Resume / LinkedIn)</fullName>
            </value>
            <value>
                <fullName>College Counseling</fullName>
            </value>
            <value>
                <fullName>Leadership Opportunities</fullName>
            </value>
            <value>
                <fullName>Mentorship Opportunities</fullName>
            </value>
            <value>
                <fullName>Networking with other Verto alumni</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>