unpackaged/main/default/objects/Alumni_Survey__c/fields/Any_final_comments_or_questions__c.field-meta.xml
<CustomField>
    <fullName>Any_final_comments_or_questions__c</fullName>
    <label>Any final comments or questions?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>