unpackaged/main/default/objects/Alumni_Survey__c/fields/Attended_college_immediately_after_Verto__c.field-meta.xml
<CustomField>
    <fullName>Attended_college_immediately_after_Verto__c</fullName>
    <label>Attended college immediately after Verto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>