unpackaged/main/default/objects/Alumni_Survey__c/fields/Can_afford_college_I_currently_attend__c.field-meta.xml
<CustomField>
    <fullName>Can_afford_college_I_currently_attend__c</fullName>
    <label>Can afford college I currently attend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>