unpackaged/main/default/objects/Alumni_Survey__c/fields/Career_plan__c.field-meta.xml
<CustomField>
    <fullName>Career_plan__c</fullName>
    <label>Career plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>