unpackaged/main/default/objects/Alumni_Survey__c/fields/Challenges_faced_transitioning_to_colleg__c.field-meta.xml
<CustomField>
    <fullName>Challenges_faced_transitioning_to_colleg__c</fullName>
    <description>Challenges faced when transitioning to college</description>
    <label>Challenges when transitioning to college</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>