unpackaged/main/default/objects/Alumni_Survey__c/fields/Clear_idea_on_what_Ill_do_this_summer__c.field-meta.xml
<CustomField>
    <fullName>Clear_idea_on_what_Ill_do_this_summer__c</fullName>
    <label>Clear idea on what I&#39;ll do this summer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>