unpackaged/main/default/objects/Alumni_Survey__c/fields/College_attended_post_Verto_was_good_fit__c.field-meta.xml
<CustomField>
    <fullName>College_attended_post_Verto_was_good_fit__c</fullName>
    <description>College attended after Verto</description>
    <label>College attended post Verto was good fit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>