unpackaged/main/default/objects/Alumni_Survey__c/fields/College_I_currently_attend__c.field-meta.xml
<CustomField>
    <fullName>College_I_currently_attend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>College I currently attend:</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please enter a valid University.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>University</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alumni Surveys</relationshipLabel>
    <relationshipName>Alumni_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>