unpackaged/main/default/objects/Alumni_Survey__c/fields/College_I_currently_attend_Text__c.field-meta.xml
<CustomField>
    <fullName>College_I_currently_attend_Text__c</fullName>
    <label>College I currently attend (Text):</label>
    <length>100</length>
    <type>Text</type>
</CustomField>