unpackaged/main/default/objects/Alumni_Survey__c/fields/Credits_earned_at_Verto_transferred__c.field-meta.xml
<CustomField>
    <fullName>Credits_earned_at_Verto_transferred__c</fullName>
    <description>The college credits I earned at Verto transferred successfully to my new college.</description>
    <label>Credits earned at Verto transferred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>