unpackaged/main/default/objects/Alumni_Survey__c/fields/Current_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Email_Address__c</fullName>
    <label>Current Email Address</label>
    <type>Email</type>
</CustomField>