unpackaged/main/default/objects/Alumni_Survey__c/fields/Current_GPA_optional__c.field-meta.xml
<CustomField>
    <fullName>Current_GPA_optional__c</fullName>
    <label>Current GPA (optional):</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>