unpackaged/main/default/objects/Alumni_Survey__c/fields/Current_intended_major__c.field-meta.xml
<CustomField>
    <fullName>Current_intended_major__c</fullName>
    <label>Current/intended major</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>College_Major_Options</valueSetName>
    </valueSet>
</CustomField>