unpackaged/main/default/objects/Alumni_Survey__c/fields/Degree_of_Independence__c.field-meta.xml
<CustomField>
    <fullName>Degree_of_Independence__c</fullName>
    <label>Degree of Independence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>