unpackaged/main/default/objects/Alumni_Survey__c/fields/Feel_connected_to_a_community_at_college__c.field-meta.xml
<CustomField>
    <fullName>Feel_connected_to_a_community_at_college__c</fullName>
    <label>Feel connected to a community at college</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>