unpackaged/main/default/objects/Alumni_Survey__c/fields/Felt_well_supported__c.field-meta.xml
<CustomField>
    <fullName>Felt_well_supported__c</fullName>
    <label>Felt well-supported by the college</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>