unpackaged/main/default/objects/Alumni_Survey__c/fields/Hardest_part_of_transition_to_college__c.field-meta.xml
<CustomField>
    <fullName>Hardest_part_of_transition_to_college__c</fullName>
    <label>Hardest part of transition to college</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>