unpackaged/main/default/objects/Alumni_Survey__c/fields/Help_figuring_out_how_to_afford_school__c.field-meta.xml
<CustomField>
    <fullName>Help_figuring_out_how_to_afford_school__c</fullName>
    <inlineHelpText>I’d like help with figuring out how to afford school.\</inlineHelpText>
    <label>Help figuring out how to afford school</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>