unpackaged/main/default/objects/Alumni_Survey__c/fields/Hispanic_Latino_Spanish_origin__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_Latino_Spanish_origin__c</fullName>
    <label>Hispanic/Latino/Spanish origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No, not of Hispanic, Latino or Spanish origin</fullName>
            </value>
            <value>
                <fullName>Yes, Mexican, Mexican Am, Chicano</fullName>
            </value>
            <value>
                <fullName>Yes, Puerto Rican</fullName>
            </value>
            <value>
                <fullName>Yes, Cuban</fullName>
            </value>
            <value>
                <fullName>Yes, another Hispanic, Latino or Spanish origin</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>