unpackaged/main/default/objects/Alumni_Survey__c/fields/How_could_Verto_be_helpful_to_you_today__c.field-meta.xml
<CustomField>
    <fullName>How_could_Verto_be_helpful_to_you_today__c</fullName>
    <label>How could Verto be helpful to you today</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>