unpackaged/main/default/objects/Alumni_Survey__c/fields/How_you_identify__c.field-meta.xml
<CustomField>
    <fullName>How_you_identify__c</fullName>
    <label>How you identify</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>