unpackaged/main/default/objects/Alumni_Survey__c/fields/I_am_on_track_to_graduate_in_4_years__c.field-meta.xml
<CustomField>
    <fullName>I_am_on_track_to_graduate_in_4_years__c</fullName>
    <label>I am on track to graduate in 4 years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>