unpackaged/main/default/objects/Alumni_Survey__c/fields/I_see_myself_as_a_global_leader__c.field-meta.xml
<CustomField>
    <fullName>I_see_myself_as_a_global_leader__c</fullName>
    <label>I see myself as a global leader</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>