unpackaged/main/default/objects/Alumni_Survey__c/fields/I_would_recommend_Verto_Ed_to_a_friend__c.field-meta.xml
<CustomField>
    <fullName>I_would_recommend_Verto_Ed_to_a_friend__c</fullName>
    <label>I would recommend Verto Ed. to a friend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>