unpackaged/main/default/objects/Alumni_Survey__c/fields/Id_like_help_deciding_on_a_major__c.field-meta.xml
<CustomField>
    <fullName>Id_like_help_deciding_on_a_major__c</fullName>
    <label>I&#39;d like help deciding on a major</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>