unpackaged/main/default/objects/Alumni_Survey__c/fields/Id_like_help_getting_a_great_summer_job__c.field-meta.xml
<CustomField>
    <fullName>Id_like_help_getting_a_great_summer_job__c</fullName>
    <label>I’d like help getting a great summer job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>