unpackaged/main/default/objects/Alumni_Survey__c/fields/Id_like_help_with_studying_abroad_again__c.field-meta.xml
<CustomField>
    <fullName>Id_like_help_with_studying_abroad_again__c</fullName>
    <label>I’d like help with studying abroad again</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>