unpackaged/main/default/objects/Alumni_Survey__c/fields/Idea_on_what_Ill_do_when_I_graduate__c.field-meta.xml
<CustomField>
    <fullName>Idea_on_what_Ill_do_when_I_graduate__c</fullName>
    <label>Idea on what I&#39;ll do when I graduate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>