unpackaged/main/default/objects/Alumni_Survey__c/fields/If_not_college_what_are_you_doing__c.field-meta.xml
<CustomField>
    <fullName>If_not_college_what_are_you_doing__c</fullName>
    <label>If not college, what are you doing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>