unpackaged/main/default/objects/Alumni_Survey__c/fields/Increased_Confidence_Living_Abroad__c.field-meta.xml
<CustomField>
    <fullName>Increased_Confidence_Living_Abroad__c</fullName>
    <label>Increased Confidence Living Abroad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>