unpackaged/main/default/objects/Alumni_Survey__c/fields/Increased_Curiosity_about_the_World__c.field-meta.xml
<CustomField>
    <fullName>Increased_Curiosity_about_the_World__c</fullName>
    <label>Increased Curiosity about the World</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>