unpackaged/main/default/objects/Alumni_Survey__c/fields/Intended_Graduation_date__c.field-meta.xml
<CustomField>
    <fullName>Intended_Graduation_date__c</fullName>
    <label>Intended Graduation date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>