unpackaged/main/default/objects/Alumni_Survey__c/fields/Intended_post_college_plan__c.field-meta.xml
<CustomField>
    <fullName>Intended_post_college_plan__c</fullName>
    <label>Intended post-college plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduate School</fullName>
            </value>
            <value>
                <fullName>Start a career</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Other (Explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>