unpackaged/main/default/objects/Alumni_Survey__c/fields/Knew_college_I_was_going_to_attend__c.field-meta.xml
<CustomField>
    <fullName>Knew_college_I_was_going_to_attend__c</fullName>
    <inlineHelpText>Before enrolling with Verto Education</inlineHelpText>
    <label>Knew college I was going to attend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>