unpackaged/main/default/objects/Alumni_Survey__c/fields/Last_Location__c.field-meta.xml
<CustomField>
    <fullName>Last_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The last Program Location the student graduated from.</description>
    <label>Last Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Alumni Surveys</relationshipLabel>
    <relationshipName>Alumni_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>