unpackaged/main/default/objects/Alumni_Survey__c/fields/Last_Program__c.field-meta.xml
<CustomField>
    <fullName>Last_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Alumni Surveys</relationshipLabel>
    <relationshipName>Alumni_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>