unpackaged/main/default/objects/Alumni_Survey__c/fields/Like_help_transferring_to_a_new_college__c.field-meta.xml
<CustomField>
    <fullName>Like_help_transferring_to_a_new_college__c</fullName>
    <description>I’d like help with transferring to a new college</description>
    <label>Like help transferring to a new college</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>