unpackaged/main/default/objects/Alumni_Survey__c/fields/More_about_Verto_experience__c.field-meta.xml
<CustomField>
    <fullName>More_about_Verto_experience__c</fullName>
    <label>More about Verto experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>