unpackaged/main/default/objects/Alumni_Survey__c/fields/More_on_chosen_college__c.field-meta.xml
<CustomField>
    <fullName>More_on_chosen_college__c</fullName>
    <label>More on chosen college</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>