unpackaged/main/default/objects/Alumni_Survey__c/fields/One_thing_Verto_could_help_with_today__c.field-meta.xml
<CustomField>
    <fullName>One_thing_Verto_could_help_with_today__c</fullName>
    <description>If Verto could help you today with one thing, what would it be</description>
    <label>One thing Verto could help with today</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>