unpackaged/main/default/objects/Alumni_Survey__c/fields/Post_college_plan_explanation__c.field-meta.xml
<CustomField>
    <fullName>Post_college_plan_explanation__c</fullName>
    <label>Post-college plan explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>