unpackaged/main/default/objects/Alumni_Survey__c/fields/Racial_ethnic_groups__c.field-meta.xml
<CustomField>
    <fullName>Racial_ethnic_groups__c</fullName>
    <label>Racial/ethnic groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arab, Middle Eastern or North African</fullName>
            </value>
            <value>
                <fullName>Indigenous</fullName>
            </value>
            <value>
                <fullName>Asian/South Asian</fullName>
            </value>
            <value>
                <fullName>Black/African Descent</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>More than one race</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>