unpackaged/main/default/objects/Alumni_Survey__c/fields/Received_a_Federal_Pell_Grant__c.field-meta.xml
<CustomField>
    <fullName>Received_a_Federal_Pell_Grant__c</fullName>
    <label>Received a Federal Pell Grant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>