unpackaged/main/default/objects/Alumni_Survey__c/fields/Rigor_of_Verto_academic_courses__c.field-meta.xml
<CustomField>
    <fullName>Rigor_of_Verto_academic_courses__c</fullName>
    <label>Rigor of Verto academic courses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>