unpackaged/main/default/objects/Alumni_Survey__c/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alumni Surveys (Student Account)</relationshipLabel>
    <relationshipName>Alumni_Surveys_Student</relationshipName>
    <type>Lookup</type>
</CustomField>