unpackaged/main/default/objects/Alumni_Survey__c/fields/Verto_counseling_before_starting_college__c.field-meta.xml
<CustomField>
    <fullName>Verto_counseling_before_starting_college__c</fullName>
    <label>Verto counseling before starting college</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>