unpackaged/main/default/objects/Alumni_Survey__c/fields/Verto_helped_me_with_financial_plan__c.field-meta.xml
<CustomField>
    <fullName>Verto_helped_me_with_financial_plan__c</fullName>
    <inlineHelpText>Verto Education helped me develop a clear plan for financing college.</inlineHelpText>
    <label>Verto helped me with financial plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>