unpackaged/main/default/objects/Alumni_Survey__c/fields/Verto_influenced_my_major_decision__c.field-meta.xml
<CustomField>
    <fullName>Verto_influenced_my_major_decision__c</fullName>
    <label>Verto influenced my major decision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>