unpackaged/main/default/objects/Alumni_Survey__c/fields/Verto_Staff_Support__c.field-meta.xml
<CustomField>
    <fullName>Verto_Staff_Support__c</fullName>
    <label>Verto Staff Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>