unpackaged/main/default/objects/Alumni_Survey__c/fields/What_would_ve_helped_overcome_challenges__c.field-meta.xml
<CustomField>
    <fullName>What_would_ve_helped_overcome_challenges__c</fullName>
    <inlineHelpText>What would have helped you overcome those challenges</inlineHelpText>
    <label>Would&#39;ve helped you overcome challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>