unpackaged/main/default/objects/Alumni_Survey__c/fields/Why_did_you_choose_your_current_college__c.field-meta.xml
<CustomField>
    <fullName>Why_did_you_choose_your_current_college__c</fullName>
    <label>Why did you choose your current college?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verto Partner College</fullName>
            </value>
            <value>
                <fullName>Affordability</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Major or Program</fullName>
            </value>
            <value>
                <fullName>Size of College</fullName>
            </value>
            <value>
                <fullName>Religious Affiliation</fullName>
            </value>
            <value>
                <fullName>Student Life (Sports, Co-Curricular Activities)</fullName>
            </value>
            <value>
                <fullName>Other (say more)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>