unpackaged/main/default/objects/Alumni_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>College_I_currently_attend__c</columns>
    <columns>College_I_currently_attend_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>